Attach sources